Interaccion con el DOM

--- a/sass/style.css
+++ b/sass/style.css
@@ -136,6 +136,22 @@ header .container-fluid .container ul li a:hover {
   }
 }
 
+main #boleta {
+  padding-left: 40%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  height: auto;
+  -webkit-box-shadow: 10px 10px 31px 5px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 31px 5px rgba(0, 0, 0, 0.75);
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+main #boleta h3 {
+  color: #111;
+  font-weight: bolder;
+}
+
 main .container h4 {
   font-weight: bolder;
   font-size: large;
