--- a/sass/style.css
+++ b/sass/style.css
@@ -42,6 +42,10 @@ body {
   color: black;
 }
 
+#bienvenida h5 {
+  color: black;
+}
+
 header .container-fluid {
   background: #024062;
   background: -webkit-gradient(linear, left top, right top, from(#024062), color-stop(20%, #020024), color-stop(80%, #020024), to(#024062));
@@ -74,6 +78,10 @@ header .container-fluid .container .nav h1:hover {
   -webkit-transition: 0.8s;
   transition: 0.8s;
   font-size: 60px;
+}
+
+header .container-fluid .container ul li h5 {
+  color: #f1f1f1;
 }
 
 header .container-fluid .container ul li a {
