--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,6 +62,15 @@ background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(217,236,247,1) 100%);
 }
 
 main{
+  #productos{
+    #respuesta2{
+      margin-left: 32px;
+      color: #f1f1f1;
+      font-weight: bold;
+      font-size: large;
+      
+    }
+  }
   #bienvenida{
     a{
       color: blue;
