--- a/sass/style.css
+++ b/sass/style.css
@@ -53,6 +53,16 @@ main #bienvenida a {
   color: blue;
 }
 
+#valorFactura {
+  color: #111;
+  font-weight: bolder;
+}
+
+#valorFactura h5 {
+  color: #111;
+  font-weight: bolder;
+}
+
 .nav-link {
   color: #f1f1f1;
 }
@@ -65,6 +75,11 @@ main #bienvenida a {
 .divCarrito {
   color: #111;
   font-weight: bolder;
+}
+
+.btns img {
+  width: 40px;
+  height: 30px;
 }
 
 header .container-fluid {
