--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,6 +97,9 @@ main{
 .divCarrito{
   color: #111;
   font-weight: bolder;
+  h6{
+    color: #111;
+  }
 }
 .btns{
   img{
@@ -106,6 +109,8 @@ main{
   }
 
 }
+
+
 header{
   
   .container-fluid{
