--- a/sass/style.css
+++ b/sass/style.css
@@ -77,6 +77,10 @@ main #bienvenida a {
   font-weight: bolder;
 }
 
+.divCarrito h6 {
+  color: #111;
+}
+
 .btns img {
   width: 40px;
   height: 30px;
